Try to fix @A-delta's problem on Safari iOS

--- a/css/style_root.css
+++ b/css/style_root.css
@@ -106,3 +106,8 @@ footer {
     margin-top: 9vw;
     margin-right: 1vw;
 }
+
+.full_td {
+    height: 100%;
+    width: 100%;
+}
